Fix overflowing text entries

--- a/gtk-3.0/apps/_gnome.scss
+++ b/gtk-3.0/apps/_gnome.scss
@@ -70,6 +70,10 @@
   }
 
   .titlebar {
+    .search{
+      border: 1px solid $borders_color;
+      border-radius: 3px;
+    }
     .path-bar-box {
       .dim-label {
         color:transparent;
