--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -5656,6 +5656,10 @@ window.background.budgie-settings-window.csd > box.horizontal > stack > scrolled
 .nautilus-window .searchbar-container {
   margin-top: -1px; }
 
+.nautilus-window .titlebar .search {
+  border: 1px solid rgba(0, 0, 0, 0.13);
+  border-radius: 3px; }
+
 .nautilus-window .titlebar .path-bar-box .dim-label, .nautilus-window .titlebar .path-bar-box label.separator, .nautilus-window .titlebar .path-bar-box .subtitle {
   color: transparent; }
 
